refactor: 기본 기본 라이브러리 사용을 위한 함수 구현 및 필요없는 코드 삭제

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(satreci C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(satreci main.c func.c func.h)
+add_executable(satreci studentMS/main.c studentMS/func.c studentMS/func.h studentMS_tests/unit_test.c studentMS_tests/unit_test.h)
