--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,6 @@ project(satreci C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(satreci studentMS/main.c studentMS/func.c studentMS/func.h studentMS_tests/unit_test.c studentMS_tests/unit_test.h)
+#add_executable(satreci studentMS/main.c studentMS/func.c studentMS/func.h studentMS_tests/unit_test.c studentMS_tests/unit_test.h)
+#add_executable(satreci studentMS/main.c studentMS/func.c studentMS/func.h)
+add_executable(satreci studentMS/func.c studentMS/func.h studentMS_tests/unit_test.c)
